fixed the error where the ranks pic was too big

--- a/Front-End/src/css/Howtoplay.css
+++ b/Front-End/src/css/Howtoplay.css
@@ -116,40 +116,3 @@
   }
 }
 
-@media (min-width: 1024px) {
-  .modal-content {
-    margin: 5% auto;
-    padding: 20px;
-    width: 500px;
-  }
-
-  .modal-title {
-    text-align: center;
-    font-size: 2rem;
-  }
-
-  .modal-example {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    justify-items: center;
-  }
-
-  .modal-example-image {
-    width: 100%;
-  }
-
-  .modal-example-rad {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .modal-example-iron {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-
-  .modal-example-wrong {
-    margin-top: 0.7rem;
-  }
-}
